nodejs/ansible/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storybook
  namespace: sharp-nonprod
  labels:
    managed-by: ansible
spec:
  type: ClusterIP
  selector:
    component: storybook-web
  ports:
    - port: 8080
      targetPort: 80
